# aacp

./: .gitignore  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml
Tests/: test_fallback_loop.py  test_new_encoders.py  test_rule_registry.py
aacp/: __init__.py  decoder.py  registry.py  schema.py  validator.py
aacp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aacp/docs/: encoder-reference.md
aacp/encoders/: __init__.py  base.py  fallback.py  llm.py  rule_based.py
aacp/encoders/workflows/: __init__.py  __init__old.py  customer_service.py  finance_legal.py  it_provisioning.py  jml.py  month_end.py  payroll.py  sales.py
benchmark/: amortisation_test.py  tokenisation_test.py
benchmark/benchmarks/: amortisation_20260601_172033.json
benchmarks/: README.md  summary.md
examples/: demo.py
registry/: README.md
