[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aacp"
version = "1.3.0"
description = "Agent Action Compression Protocol — pipe-delimited coordination for multi-agent LLM systems"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrew Mackay", email = "mackayandrewr@gmail.com" }
]
keywords = [
    "aacp", "agents", "multi-agent", "llm", "protocol",
    "coordination", "compression", "tokens"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
all = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://aacp.dev"
Repository = "https://github.com/MackayAndrew/aacp"
Documentation = "https://aacp.dev/spec"
"IETF Draft" = "https://datatracker.ietf.org/doc/draft-mackay-aacp/"
"Bug Tracker" = "https://github.com/MackayAndrew/aacp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aacp*"]

[tool.setuptools.package-data]
aacp = ["py.typed"]
